# fino

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  TODO  autoclean.sh  autogen.sh  configure.ac  get.m4  get.sh  markdown.sh  petscslepc.mak  plugin.mk  sha_wasora
doc/: .gitignore  000-tensile-test.m4  Makefile.am  README.md  fino.1  fino.1.md  fino.md  fino.texi  fino.xml  help.md  help.txt  keywords.sh  keywords.tex  make.sh  md2texi.sh  plugin.texi  reference-manual.m4  reference-manual.md  reference-toc.md  reference.m4  reference.md  reference.sh  reference.txt  skel.md  skel.texi  syntax-geany.sh  syntax-kate.sh  syntax-tex.sh  syntax.tex  template.texi  version.texi
doc/000-tensile-test/: README.m4  displ.fin  load.fin  parametric-energy.fin  parametric-solver.fin  tensile-test.geo
examples/: .gitignore  2dbeam-hex-struct.geo  2dbeam-quad-struct.geo  2dbeam-quad.fin  2dbeam-subintegrated.fin  annulus.geo  arbitrary-thermal-expansion.fin  beam-modal.fin  beam-modal.geo  beam-pure-bending.fin  beam-quads.fin  beam-quads.geo  beam.fin  beam.geo  cantilever.fcstd  cantilever.fin  cantilever.geo.m4  cantilever.ppl  cantilever.step  challenge.fin  clean.sh  compsolid.fin  compsolid.geo  compsolid.vtk  conic_valve.brep  conic_valve.fcstd  conic_valve.fin  conic_valve.geo  crack.fin  crack.py  cube-tet.geo  cube.geo  cylinder.geo  elephant-3d.fin  elephant-3d.geo  elephant-axi.fin  elephant-axi.geo  engine-piston-out.msh  engine-piston.fin  engine-piston.geo  (+116 more)
m4/: bootstrap.m4  petsc.m4  python.m4  wasora.m4
src/: Makefile.am  bake.c  bc.c  breakshake.c  bulk.c  debug.c  distributions.c  eigen_slepc.c  fino.c  fino.h  gradient.c  init.c  linear_petsc.c  linearize.c  mat2sng.c  mat2sng.h  mechanical.c  nonlinear_petsc.c  parser.c  petsc_handler.c  petsc_ksp.c  petsc_snes.c  petsc_ts.c  petschandler.c  post.c  reactions.c  slepc_eigen.c  thermal.c  times.c  version.c  version.sh
test/: Makefile.am  bc-moment-barycenter.fin  bc-moment-barycenter.sh  bc-moment-x0-y0-z0.fin  bc-moment-x0-y0-z0.sh  bc-moment-x0-y0.fin  bc-moment-x0-y0.sh  bc-moment-x0.fin  bc-moment-x0.sh  bc-moment-y0-z0.fin  bc-moment-y0-z0.sh  bc-moment-y0.fin  bc-moment-y0.sh  bc-moment-z0-x0.fin  bc-moment-z0-x0.sh  bc-moment-z0.fin  bc-moment-z0.sh  bc-moment.fin  bc-radial-barycenter.fin  bc-radial-barycenter.sh  bc-radial-x0-y0-z0.fin  bc-radial-x0-y0-z0.sh  bc-radial-x0-y0.fin  bc-radial-x0-y0.sh  bc-radial-x0.fin  bc-radial-x0.sh  bc-radial-y0-z0.fin  bc-radial-y0-z0.sh  bc-radial-y0.fin  bc-radial-y0.sh  bc-radial-z0-x0.fin  bc-radial-z0-x0.sh  bc-radial-z0.fin  bc-radial-z0.sh  bc-radial.fin  cube-hex20-struct.geo  cube-hex20-struct.msh  cube-hex20-unstruct.geo  functions.sh  parallelepiped-hex-1.msh  (+12 more)
