TESTS = \
bc-moment-barycenter.sh \
bc-moment-x0.sh \
bc-moment-y0.sh \
bc-moment-z0.sh \
bc-moment-x0-y0.sh \
bc-moment-y0-z0.sh \
bc-moment-z0-x0.sh \
bc-moment-x0-y0-z0.sh \
bc-radial-barycenter.sh \
bc-radial-x0.sh \
bc-radial-y0.sh \
bc-radial-z0.sh \
bc-radial-x0-y0.sh \
bc-radial-y0-z0.sh \
bc-radial-z0-x0.sh \
bc-radial-x0-y0-z0.sh \
parallelepiped-hex-1.sh \
parallelepiped-hex-2.sh \
parallelepiped-tet-1.sh \
parallelepiped-tet-2.sh
